<?xml version="1.0"?>
<package format="2">

  <name>ackermann_msckf</name>
  <version>0.0.1</version>
  <description>ACK-MSCKF</description>
  
  <maintainer email="shijz16@mails.jlu.edu.cn"></maintainer>
  <license>Penn Software License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>random_numbers</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_srvs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>
  <depend>suitesparse</depend>

  <test_depend>rosunit</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
